Fix: SlikName — tahunBulan Map, session TTL, truncate pesan, better logging
- SlikJsonDto: KreditPembiayaan ganti ke class dengan @JsonAnySetter
  untuk capture field tahunBulan{n}/{n}Kol/{n}Ht sebagai Map
- SlikSessionCache: tambah TTL 30 menit per sesi, cleanup @Scheduled tiap 5 menit
- SlikNameFormatter: tampilkan kol terburuk & max hari tunggakan 24 bulan,
  truncate pesan >4000 karakter, better error logging saat parse gagal
- SlikCommand.extractPageData: tambah debug/warn log tiap tahap

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>